# movielens-recommendation-system

./: .gitignore  README.md  pyproject.toml
infra/: README.md  main.tf  outputs.tf  variables.tf
scripts/: run_pipeline.py
scripts/data_prep/: step1_genre_onehot.py  step2_data_quality_checks.py  step3_feature_selection.py  step4_time_based_split.py
scripts/post_training/: find_champion_model.py  register_models.py
src/app/: main.py
src/models/: train_drf.py  train_glm.py  train_h2o.py  train_xgboost.py
src/models/archive/: train_matrix_factorization.py  train_neural_network.py
