[project]
name = "movielens-rating-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h2o>=3.46.0.9",
    "joblib>=1.5.2",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
    "boto3>=1.34.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "evidently>=0.4.0",
]
